--- a/javaee/src/main/webapp/WEB-INF/web.xml
+++ b/javaee/src/main/webapp/WEB-INF/web.xml
@@ -1,1 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<web-app 
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1" 
+	metadata-complete="true">
+	
+	<context-param>
+		<param-name>viewPath</param-name>
+		<param-value>/Users/brad/git/repository4/javaee/src/main/webapp/views</param-value>
+	</context-param>
+
+</web-app>
